--- a/src/App.css
+++ b/src/App.css
@@ -41,14 +41,16 @@ body {
   background-color: #eee;
 }
 
+h3 {
+  margin: 5px 0 0 0;
+}
+
 form {
   display: flex;
   flex-direction: column;
   width: 500px;
   padding: 5px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 5%;
+  margin: 2% auto;
   border: 2px solid black;
   border-radius: 10px;
   box-shadow: 0 8px 7px 0 rgba(0, 0, 0, 0.3), 0 6px 15px 0 rgba(0, 0, 0, 0.65);
@@ -75,6 +77,7 @@ option {
 
 textarea {
   width: 350px;
+  height: 75px;
   margin: 0 auto;
 }
 
